[package]
name = "revault_net"
version = "0.1.0"
authors = ["JSwambo <jake.t.swambo@hotmail.co.uk>", "Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"
repository = "https://github.com/revault/revault_tx"
license-file = "LICENSE"
keywords = ["bitcoin", "vault", "Noise", "transport"]
description = "Transport and messages implementation of the version 0 Revault protocol"
exclude = [".github/", "fuzz"]

[features]
# Get access to internal APIs from the fuzzing framework
fuzz = []
tor = ["libtor", "socks"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

revault_tx = { git = "https://github.com/revault/revault_tx", features = ["use-serde"] }
bitcoin = { version = "0.27", features = ["use-serde"] }
snow = { version = "0.7", default-features = false, features = ["libsodium-resolver"] }
socks = { version = "0.3.3", optional = true }

# Used for Noise crypto and generating pubkeys
sodiumoxide = { version = "0.2", features = ["serde"] }

log = "0.4"

# We need to use vendored-openssl on Windows
[target.'cfg(target_os = "windows")'.dependencies]
libtor = { version = "46.6", optional = true, features = ["vendored-openssl"] }
[target.'cfg(not(target_os = "windows"))'.dependencies]
libtor = { version = "46.6", optional = true }
