[package]
name = "revault_net"
version = "0.2.1"
authors = ["JSwambo <jake.t.swambo@hotmail.co.uk>", "Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"
rust-version = "1.43"
repository = "https://github.com/revault/revault_net"
license-file = "LICENSE"
keywords = ["bitcoin", "vault", "Noise", "transport"]
description = "Transport and messages implementation of the version 0 Revault protocol"
exclude = [".github/", "fuzz"]

[features]
# Get access to internal APIs from the fuzzing framework
fuzz = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

revault_tx = { git = "https://github.com/revault/revault_tx", features = ["use-serde"] }
bitcoin = { version = "0.27", features = ["use-serde"] }
snow = { version = "0.7", default-features = false, features = ["libsodium-resolver"] }

# Used for Noise crypto and generating pubkeys
sodiumoxide = { version = "0.2", features = ["serde"] }

log = "0.4"
